MODERNIZACJA NAWIGACJI: Nowy design i usunięcie zbędnych stron
🔄 ZMIANY W NAWIGACJI:
- ❌ Usunięto stronę support.html
- ❌ Usunięto zakładkę 'Support' i 'Kontakt'
- ✅ Pozostawiono tylko: Główna | Mody | Live Support
- 🎨 Nowy design nawigacji z ikonami i opisami

🎯 NOWA NAWIGACJA:
- 🏠 Główna (Strona startowa)
- 🧩 Mody (Przeglądaj kolekcję)
- 🎧 Live Support (Pomoc 24/7)

✨ NOWE STYLE NAWIGACJI:
- Icon containers z kolorami tematycznymi
- Gradienty dla każdej sekcji (blue/purple/cyan)
- Hover efekty z transform i shadow
- Subtitles dla lepszego UX
- Responsywny design
- Glass morphism effects

🔧 TECHNICZNE ZMIANY:
- Zaktualizowano wszystkie linki nawigacyjne
- Dodano nowe CSS classes (nav-home, nav-mods, nav-chat)
- Support CSS dla nowych elementów nawigacji
- Mobile-friendly navigation

--- a/pages/mods.html
+++ b/pages/mods.html
@@ -28,25 +28,32 @@
             
             <nav class="modern-nav">
                 <div class="nav-items">
-                    <a href="../index.html" class="nav-item">
-                        <i class="fas fa-home"></i>
-                        <span>Główna</span>
+                    <a href="../index.html" class="nav-item nav-home">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-home"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Główna</span>
+                            <span class="nav-subtitle">Strona startowa</span>
+                        </div>
                     </a>
-                    <a href="mods.html" class="nav-item active">
-                        <i class="fas fa-puzzle-piece"></i>
-                        <span>Mody</span>
+                    <a href="mods.html" class="nav-item active nav-mods">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-cube"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Mody</span>
+                            <span class="nav-subtitle">Przeglądaj kolekcję</span>
+                        </div>
                     </a>
-                    <a href="support.html" class="nav-item">
-                        <i class="fas fa-life-ring"></i>
-                        <span>Support</span>
-                    </a>
-                    <a href="support-chat.html" class="nav-item">
-                        <i class="fas fa-comments"></i>
-                        <span>Chat</span>
-                    </a>
-                    <a href="contact.html" class="nav-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>Kontakt</span>
+                    <a href="support-chat.html" class="nav-item nav-chat">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-headset"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Live Support</span>
+                            <span class="nav-subtitle">Pomoc 24/7</span>
+                        </div>
                     </a>
                 </div>
             </nav>
