--- a/index.html
+++ b/index.html
@@ -28,25 +28,32 @@
             
             <nav class="modern-nav">
                 <div class="nav-items">
-                    <a href="index.html" class="nav-item active">
-                        <i class="fas fa-home"></i>
-                        <span>Główna</span>
+                    <a href="index.html" class="nav-item active nav-home">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-home"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Główna</span>
+                            <span class="nav-subtitle">Strona startowa</span>
+                        </div>
                     </a>
-                    <a href="pages/mods.html" class="nav-item">
-                        <i class="fas fa-puzzle-piece"></i>
-                        <span>Mody</span>
+                    <a href="pages/mods.html" class="nav-item nav-mods">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-cube"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Mody</span>
+                            <span class="nav-subtitle">Przeglądaj kolekcję</span>
+                        </div>
                     </a>
-                    <a href="pages/support.html" class="nav-item">
-                        <i class="fas fa-life-ring"></i>
-                        <span>Support</span>
-                    </a>
-                    <a href="pages/support-chat.html" class="nav-item">
-                        <i class="fas fa-comments"></i>
-                        <span>Chat</span>
-                    </a>
-                    <a href="pages/contact.html" class="nav-item">
-                        <i class="fas fa-envelope"></i>
-                        <span>Kontakt</span>
+                    <a href="pages/support-chat.html" class="nav-item nav-chat">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-headset"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Live Support</span>
+                            <span class="nav-subtitle">Pomoc 24/7</span>
+                        </div>
                     </a>
                 </div>
             </nav>
