--- a/pages/support-chat.html
+++ b/pages/support-chat.html
@@ -1,31 +1,75 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="pl" class="modern-theme">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chat Support - SBPack | revsafeDEV</title>
-    <meta name="description" content="Czat na żywo z zespołem wsparcia SBPack. Szybka pomoc w rozwiązywaniu problemów z modami FiveM.">
-    <link rel="stylesheet" href="../assets/css/styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+    <title>Live Support 24/7 - SBPack | revsafeDEV</title>
+    <meta name="description" content="Profesjonalne wsparcie na żywo 24/7. Czat z ekspertami FiveM, szybka pomoc techniczna i rozwiązywanie problemów.">
+    <meta name="keywords" content="FiveM live support, czat wsparcie, pomoc techniczna, 24/7 support">
+    <link rel="stylesheet" href="../assets/css/styles-new.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
-<body>
-    <!-- Header -->
-    <header class="header">
-        <div class="container">
-            <div class="logo" ondblclick="showLoginModal()" title="Podwójny klik dla dostępu administratora">
-                <i class="fas fa-gamepad"></i>
-                <span>SBPack</span>
+<body class="modern-body">
+    <!-- Modern Header -->
+    <header class="modern-header">
+        <div class="header-container">
+            <div class="logo-section" ondblclick="showLoginModal()" title="Podwójny klik dla dostępu administratora">
+                <div class="logo-icon">
+                    <i class="fas fa-code"></i>
+                </div>
+                <div class="logo-text">
+                    <span class="brand-name">SBPack</span>
+                    <span class="brand-subtitle">by revsafeDEV</span>
+                </div>
             </div>
-            <nav class="nav">
-                <a href="../index.html" class="nav-link">Główna</a>
-                <a href="mods.html" class="nav-link">Mody</a>
-                <a href="support.html" class="nav-link">Support</a>
-                <a href="support-chat.html" class="nav-link active">Chat Support</a>
-                <a href="contact.html" class="nav-link">Kontakt</a>
+            
+            <nav class="modern-nav">
+                <div class="nav-items">
+                    <a href="../index.html" class="nav-item nav-home">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-home"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Główna</span>
+                            <span class="nav-subtitle">Strona startowa</span>
+                        </div>
+                    </a>
+                    <a href="mods.html" class="nav-item nav-mods">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-cube"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Mody</span>
+                            <span class="nav-subtitle">Przeglądaj kolekcję</span>
+                        </div>
+                    </a>
+                    <a href="support-chat.html" class="nav-item active nav-chat">
+                        <div class="nav-icon-container">
+                            <i class="fas fa-headset"></i>
+                        </div>
+                        <div class="nav-content">
+                            <span class="nav-title">Live Support</span>
+                            <span class="nav-subtitle">Pomoc 24/7</span>
+                        </div>
+                    </a>
+                </div>
             </nav>
-            <div class="mobile-menu-btn">
-                <i class="fas fa-bars"></i>
+            
+            <div class="header-actions">
+                <button class="search-btn">
+                    <i class="fas fa-search"></i>
+                </button>
+                <button class="theme-toggle">
+                    <i class="fas fa-moon"></i>
+                </button>
+                <button class="mobile-menu-toggle">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                </button>
             </div>
         </div>
     </header>
