NAPRAWKI CSS i GitHub Pages: Rozwiąż problemy z ładowaniem
🔧 NAPRAWKI TECHNICZNE:
- Skopiowano styles-new.css do styles.css (kompatybilność)
- Zmieniono wszystkie linki z styles-new.css na styles.css
- Dodano responsive design dla nowej nawigacji
- Poprawiono flex-wrap w nav-items

📱 RESPONSIVE IMPROVEMENTS:
- Dodano @media queries dla 1024px breakpoint
- Zmniejszono rozmiary nav elementów na tablet
- Poprawiono font sizes dla mobile
- Lepsze wyświetlanie na różnych rozdzielczościach

🚀 GITHUB PAGES FIXES:
- Używamy standardowej nazwy styles.css
- Wszystkie pliki HTML używają poprawnych linków
- Zachowana kompatybilność wstecz
- Usunięto potencjalne problemy z cache

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>SBPack - Nowoczesne Mody FiveM | revsafeDEV</title>
     <meta name="description" content="Najnowocześniejsza platforma modów FiveM. Odkryj premium skrypty, pojazdy, mapy i zasoby dla serwera FiveM. Professional gaming experience.">
     <meta name="keywords" content="FiveM, mody, skrypty, pojazdy, mapy, GTA V, roleplay, serwer, premium, gaming">
-    <link rel="stylesheet" href="assets/css/styles-new.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
