--- a/pages/support-chat.html
+++ b/pages/support-chat.html
@@ -6,7 +6,7 @@
     <title>Live Support 24/7 - SBPack | revsafeDEV</title>
     <meta name="description" content="Profesjonalne wsparcie na żywo 24/7. Czat z ekspertami FiveM, szybka pomoc techniczna i rozwiązywanie problemów.">
     <meta name="keywords" content="FiveM live support, czat wsparcie, pomoc techniczna, 24/7 support">
-    <link rel="stylesheet" href="../assets/css/styles-new.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
