--- a/pages/mods.html
+++ b/pages/mods.html
@@ -6,7 +6,7 @@
     <title>Premium Mody FiveM - SBPack | revsafeDEV</title>
     <meta name="description" content="Odkryj najnowocześniejsze mody FiveM. Premium skrypty, pojazdy, mapy i zasoby dla profesjonalnych serwerów gaming.">
     <meta name="keywords" content="FiveM, mody, skrypty, pojazdy, mapy, GTA V, roleplay, serwer, premium, gaming, ESX, QBCore">
-    <link rel="stylesheet" href="../assets/css/styles-new.css">
+    <link rel="stylesheet" href="../assets/css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
