📱 Add comprehensive phone/mobile version optimization
🔧 Performance & Accessibility:
- Added mobile-first CSS optimizations with performance enhancements
- Implemented touch-friendly interactions with proper tap targets (44px min)
- Added reduced motion preferences support for accessibility
- Enhanced text rendering and font smoothing for mobile displays

📐 Ultra-Mobile Layout (375px and smaller):
- Ultra-compact header with smaller logo and reduced padding
- Optimized hero section with mobile-friendly typography
- Compressed navigation menu with better touch targets
- Reduced feature card sizes and improved content hierarchy

🎨 Enhanced Mobile Breakpoints:
- 768px: Tablet-friendly layout with single-column mod grid
- 480px: Small phone optimization with compact elements
- 375px: Ultra-small phone support with minimal padding
- Landscape orientation: Special layout for phone rotation

🎯 Touch Device Optimizations:
- Removed hover effects on touch devices for better performance
- Added active states for visual feedback on touch
- Improved scroll behavior with proper scroll margins
- Enhanced tap highlighting with brand colors

📱 Mobile Navigation:
- Improved mobile menu with better height calculations
- Touch-friendly navigation items with proper spacing
- Enhanced hamburger animation and interaction
- Better mobile menu scrolling for long navigation lists

🛍️ Mods Page Mobile Enhancement:
- Single column grid for mobile devices
- Compact search input with mobile-friendly sizing
- Filter buttons show icons only on mobile to save space
- Optimized mod cards with smaller images and content

🔧 Admin Panel Mobile:
- Responsive admin panel layout for mobile management
- Single-column form layout on small screens
- Touch-friendly form inputs and buttons
- Proper modal sizing for mobile screens

🌐 Progressive Web App Features:
- Enhanced viewport meta tags with viewport-fit=cover
- Theme color support for mobile browser bars
- Apple web app capabilities for iOS devices
- Fo

--- a/pages/support-chat.html
+++ b/pages/support-chat.html
@@ -2,8 +2,12 @@
 <html lang="pl" class="modern-theme">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Live Support 24/7 - SBPack | revsafeDEV</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="theme-color" content="#667eea">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
+    <title>Live Support Chat - SBPack | revsafeDEV</title>
     <meta name="description" content="Profesjonalne wsparcie na żywo 24/7. Czat z ekspertami FiveM, szybka pomoc techniczna i rozwiązywanie problemów.">
     <meta name="keywords" content="FiveM live support, czat wsparcie, pomoc techniczna, 24/7 support">
     <link rel="stylesheet" href="../assets/css/styles.css">
