--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <html lang="pl" class="modern-theme">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=5.0, user-scalable=yes, viewport-fit=cover">
+    <meta name="theme-color" content="#667eea">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="format-detection" content="telephone=no">
     <title>SBPack - Nowoczesne Mody FiveM | revsafeDEV</title>
     <meta name="description" content="Najnowocześniejsza platforma modów FiveM. Odkryj premium skrypty, pojazdy, mapy i zasoby dla serwera FiveM. Professional gaming experience.">
     <meta name="keywords" content="FiveM, mody, skrypty, pojazdy, mapy, GTA V, roleplay, serwer, premium, gaming">
