Naprawa referencji funkcji downloadFreeMod - kompletny system sklepu i statystyk
- Naprawiona referencja onclick w przycisku do pobierania darmowych modów
- Zintegrowany kompletny system koszyka zakupów z PayPal
- Dodany system zarządzania zakupionymi modami
- Zaimplementowany menedżer statystyk z prawdziwymi danymi
- Wszystkie systemy działają razem: koszyk -> płatność -> zakupione mody -> statystyki
- Poprawne aktualizowanie licznika pobrań dla darmowych modów
- Responsywne style dla wszystkich nowych komponentów interfejsu

--- a/index.html
+++ b/index.html
@@ -582,5 +582,8 @@
     </div>
 
     <script src="assets/js/script.js"></script>
+    <script src="assets/js/modules/statistics.js"></script>
+    <script src="assets/js/modules/cart.js"></script>
+    <script src="assets/js/modules/purchases.js"></script>
 </body>
 </html>
