--- a/pages/mods.html
+++ b/pages/mods.html
@@ -360,6 +360,9 @@
     </div>
 
     <script src="../assets/js/script.js"></script>
+    <script src="../assets/js/modules/statistics.js"></script>
+    <script src="../assets/js/modules/cart.js"></script>
+    <script src="../assets/js/modules/purchases.js"></script>
     <script>
         // Filter functionality - improved version
         document.addEventListener('DOMContentLoaded', function() {
