--- a/index.html
+++ b/index.html
@@ -891,12 +891,20 @@
                 <div class="footer-left">
                     <div class="logo">
                         <i class="fas fa-gamepad"></i>
-                        <span>SBPack</span>
+                        <span>SBMods</span>
                     </div>
-                    <p>Najlepsze mody FiveM od revsafeDEV</p>
+                    <p>Otwarta platforma modów FiveM dla społeczności</p>
+                </div>
+                <div class="footer-center">
+                    <div class="footer-links">
+                        <a href="#" onclick="showTermsModal(); return false;">Regulamin</a>
+                        <a href="#" onclick="showTermsModal(); return false;">Polityka prywatności</a>
+                        <a href="pages/support.html">Wsparcie</a>
+                        <a href="https://github.com/revsafeDEV/SBPack" target="_blank">GitHub</a>
+                    </div>
                 </div>
                 <div class="footer-right">
-                    <p>&copy; 2025 SBPack by revsafeDEV. Wszystkie prawa zastrzeżone.</p>
+                    <p>&copy; 2025 SBMods Platform. Tworzone przez społeczność dla społeczności.</p>
                 </div>
             </div>
         </div>
@@ -911,7 +919,9 @@
     <script src="assets/js/modules/statistics.js"></script>
     <script src="assets/js/modules/cart.js"></script>
     <script src="assets/js/modules/purchases.js"></script>
+    <script src="assets/js/modules/terms.js"></script>
     <script src="assets/js/modules/auth.js"></script>
     <script src="assets/js/modules/user-mods.js"></script>
+    <script src="assets/js/modules/mod-preview.js"></script>
 </body>
 </html>
