--- a/index.html
+++ b/index.html
@@ -915,6 +915,11 @@
         <i class="fas fa-cog"></i>
     </div>
 
+    <!-- Config i podstawowe moduły muszą być załadowane pierwszy -->
+    <script src="assets/js/config.js"></script>
+    <script src="assets/js/modules/notifications.js"></script>
+    
+    <!-- Reszta modułów -->
     <script src="assets/js/script.js"></script>
     <script src="assets/js/modules/statistics.js"></script>
     <script src="assets/js/modules/cart.js"></script>
